style.css
body {
  width: 1024px;
  margin: 0 auto;
  box-sizing: border-box;
}
.block {

}

footer {
  overflow: hidden;
  background-color: #2b2b2b;
  padding: 20px 10px;
  position: fixed;
  width: 1024px;
  top: 0;
  z-index: 10;
}

footer a {
  float: left;
  color: whitesmoke;
  text-align: center;
  margin-left: 20px;
  margin-right: 20px;
  padding: 20px;
  text-decoration: none;
  font-size: 18px;
  line-height: 25px;
  border-radius: 4px;
}

a:hover {
  background-color: rgb(107, 189, 0);
  color: white;
}

main {
  position: relative;
  top: 100px;
}

/*.grid {
  display: grid;
  position: relative;
  top: 100px;
  grid-template: repeat(6, 1fr), repeat(6, 1 fr);
}

